<resources>

    <!--strings used in layout-->
    <string name="app_name">Wirtualna Apteczka</string>
    <string name="title_activity_new_medicine_form">Dodaj lek</string>
    <string name="title_activity_modify_medicine_form">Modyfikuj lek</string>
    <string name="title_activity_add_new_pack">Dodaj opakowanie</string>
    <string name="title_activity_modify_pack">Modyfikuj opakowanie</string>
    <string name="title_activity_add_new_dose">Dodaj dawkę</string>
    <string name="title_activity_modify_dose">Modyfikuj dawkę</string>
    <string name="title_activity_medicine_list">Lista leków</string>
    <string name="add_new_medicine">Dodanie Nowego Leku</string>
    <string name="details">Szczegóły leku</string>
    <string name="name_of_medicine">Nazwa leku</string>
    <string name="description">Opis</string>
    <string name="enable_counting_label">Ustaw ilość</string>
    <string name="size">Wielkość</string>
    <string name="count">Ilość</string>
    <string name="medicine_type">Rodzaj leku:</string>
    <string name="unit">Jednostka</string>
    <string name="barcode">Kod kreskowy</string>
    <string name="function">Funkcje:</string>
    <string name="modify_medicine">Modyfikuj lek</string>
    <string name="delite_medicine">Usuń lek</string>
    <string name="list_of_medicine">Lista leków</string>
    <string name="end_program">Zakończ program</string>
    <string name="add_new_label">Dodaj nową etykietę</string>
    <string name="add_medicine">Dodaj lek</string>
    <string name="add_medicine_main">Dodaj lek</string>
    <string name="add_manually">Dodaj ręcznie</string>
    <string name="add_by_camera">Dodaj przy użyciu czytnika kodów</string>
    <string name="add_medicine_success">Lek został poprawnie dodany</string>
    <string name="add_medicine_failure">Lek nie został dodany</string>
    <string name="search">Szukaj</string>
    <string name="select_medicine_type">Wybierz rodzaj leku:</string>
    <string name="select_medicine_type_unit">Wybierz jednostkę:</string>
    <string name="delete_title">Usuń</string>
    <string name="delete_confirm_question">Czy na pewno chcesz usunać lek?</string>
    <string name="answer_yes">TAK</string>
    <string name="answer_no">NIE</string>
    <string name="info_after_delete_medicine">Lek został usunięty</string>
    <string name="prompt_for_barcode_scanner">Zeskanuj kod kreskowy</string>
    <string name="cancelled_scanner_barcode">Anulowano</string>
    <string name="correct_scanner_barcode">Zeskanowano</string>
    <string name="form_validation_failure">Uzupełnij nazwę leku</string>
    <string name="dosage">Ustaw dawkowanie</string>
    <string name="add_new_dosage">Dodaj nową dawkę</string>
    <string name="hour">Godzina</string>
    <string name="data">Data</string>
    <string name="confirm">Zatwierdz</string>
    <string name="cancel">Anuluj</string>
    <string name="adjust">Dostosuj</string>
    <string name="regular_dosage">Dawka regularna</string>
    <string name="add_date">Kliknij aby wprowadzić datę.</string>
    <string name="add_time">Kliknij aby wprowadzić godzinę.</string>
    <string name="period_of_time">Liczba godzin</string>
    <string name="period">Okres</string>
    <string name="pickTimeIntervalTitle">Ustaw czas pomiędzy dawkami</string>
    <string name="pickDaysOfWeek">Wybierz dni tygodnia</string>
    <string name="save">Zapisz</string>
    <string name="pickDaysOfMonth">Wybierz dni miesiąca</string>
    <string name="modify_medicine_success">Lek został poprawnie zmodyfikowany</string>
    <string name="modify_medicine_failure">Lek nie został poprawnie zmodyfikowany</string>

    <string name="name_label">Nazwa leku</string>
    <string name="description_label">Opis</string>
    <string name="quantity_label">Ilość i Rodzaj</string>
    <string name="barcode_label">Numer EAN</string>
    <string name="submit_form">Zatwierdź</string>
    <string name="read_barcode">Read Barcode</string>

    <string name="medicine_validation_empty_name">Nazwa leku nie może być pusta</string>
    <string name="medicine_validation_empty_type_unit">Wybierz jednostkę dla wybranego rodzaju leku</string>
    <string name="responsible_subject">Podmiot odpowiedzialny</string>
    <string name="menu_button_save">Zapisz</string>

</resources>
