<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smartcity.kni.wirtualnaapteczka.AddNewPackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/pack_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="numberDecimal" />

            <AutoCompleteTextView
                android:id="@+id/pack_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:hint="@string/unit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/barcode_From_New_Medicine_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:ems="10"
                android:hint="@string/barcode"
                android:inputType="numberDecimal" />

            <ImageButton
                android:id="@+id/barcode_From_Camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/read_barcode"
                android:src="@drawable/ic_camera" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
